# facet-v8

./: Cargo.toml  README.md
benches/: serde.rs
src/: extension.rs  lib.rs  marshal.rs
src/extension/: facet.ts
src/marshal/: array.rs  enum_.rs  map.rs  object.rs  pointer.rs  scalar.rs  set.rs
tests/: serialize.rs  util.rs
