[package]
name = "facet-v8"
version = "0.1.0"
edition = "2024"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]

[dependencies]
bytemuck = "1.23.1"
deno_core = { version = "0.350.0", default-features = false, optional = true }
facet-core = { version = "0.27.14", default-features = false, features = ["alloc"] }
facet-reflect = { version = "0.27.14", default-features = false, features = ["alloc"] }
thiserror = "2.0.12"
v8 = "137.2.0"

[dev-dependencies]
facet = { version = "0.27.14", default-features = false, features = ["std", "reflect"] }
serde_v8 = "0.260.0"
divan = "0.1.21"
serde = { version = "1.0.219", features = ["derive"] }

[features]
deno = ["dep:deno_core"]

[[bench]]
name = "serde"
harness = false
